
Version 1.0.4

    - Retry on all HTTP error codes, not just 500 or greater. Tests show that
      a valid request can return a 4xx response due to network issues.
    - Added `--assumeEmpty' flag.
    - Support 'E' for 'exabytes'.
    - Port to Mac OS 

Version 1.0.3 released 30 June 2008

    - Implement exponential backoff: replace ``--maxRetry'' and ``--retryPause''
      with ``--initialRetryPause'' and ``--maxRetryPause''.
    - Fix `--accessType' flag which was not being properly handled.
    - Improvements to the man page.

Version 1.0.2 released 20 June 2008

    - Fix bug in setting User-Agent HTTP header.
    - Fix glitch in man page.

Version 1.0.1 released 20 June 2008

    - Store filesystem size in meta-data associated with the first block and
      use it to auto-detect filesystem block and file sizes if not specified.
      As a result, `--size' flag is now optional.
    - Log a warning and zero remaining bytes when we encounter a short read.
    - Add User-Agent HTTP header to all HTTP requests.
    - Include SVN revision in version string.
    - Don't log every HTTP operation unless `-d' is passed.
    - Added `--force' flag.

Version 1.0.0 released 19 June 2008

$Id$