@@ -47,6 +47,7 @@
 #define S3BACKER_DEFAULT_CONNECT_TIMEOUT        30
 #define S3BACKER_DEFAULT_IO_TIMEOUT             30
 #define S3BACKER_DEFAULT_FILE_MODE              0600
+#define S3BACKER_DEFAULT_FILE_MODE_READ_ONLY    0400
 #define S3BACKER_DEFAULT_INITIAL_RETRY_PAUSE    200             // 200ms
 #define S3BACKER_DEFAULT_MAX_RETRY_PAUSE        30000           // 30s
 #define S3BACKER_DEFAULT_MIN_WRITE_DELAY        500             // 500ms
@@ -93,7 +94,7 @@ static struct s3backer_conf config = {
     .user_agent=            user_agent_buf,
     .block_size=            0,
     .file_size=             0,
-    .file_mode=             S3BACKER_DEFAULT_FILE_MODE,
+    .file_mode=             -1,             /* default depends on 'read_only' */
     .connect_timeout=       S3BACKER_DEFAULT_CONNECT_TIMEOUT,
     .io_timeout=            S3BACKER_DEFAULT_IO_TIMEOUT,
     .initial_retry_pause=   S3BACKER_DEFAULT_INITIAL_RETRY_PAUSE,
@@ -162,6 +163,11 @@ static const struct fuse_opt option_list[] = {
         .value=     FUSE_OPT_KEY_DISCARD
     },
     {
+        .templ=     "--fileMode=%o",
+        .offset=    offsetof(struct s3backer_conf, file_mode),
+        .value=     FUSE_OPT_KEY_DISCARD
+    },
+    {
         .templ=     "--filename=%s",
         .offset=    offsetof(struct s3backer_conf, filename),
         .value=     FUSE_OPT_KEY_DISCARD
@@ -194,6 +200,11 @@ static const struct fuse_opt option_list[] = {
     {
         .templ=     "--prefix=%s",
         .offset=    offsetof(struct s3backer_conf, prefix),
+        .value=     FUSE_OPT_KEY_DISCARD
+    },
+    {
+        .templ=     "--readOnly",
+        .offset=    offsetof(struct s3backer_conf, read_only),
         .value=     FUSE_OPT_KEY_DISCARD
     },
     {
@@ -455,6 +466,10 @@ validate_config(void)
         }
     }
 
+    /* Auto-set file mode in read_only if not explicitly set */
+    if (config.file_mode == -1)
+        config.file_mode = config.read_only ? S3BACKER_DEFAULT_FILE_MODE_READ_ONLY : S3BACKER_DEFAULT_FILE_MODE;
+
     /* If no accessId specified, default to first in accessFile */
     if (config.accessId == NULL && config.accessFile != NULL)
         search_access_for(config.accessFile, NULL, &config.accessId, NULL);
@@ -655,7 +670,7 @@ dump_config(void)
     (*config.log)(LOG_DEBUG, "%16s: \"%s\"", "accessKey", config.accessKey != NULL ? "****" : "");
     (*config.log)(LOG_DEBUG, "%16s: \"%s\"", "accessFile", config.accessFile);
     (*config.log)(LOG_DEBUG, "%16s: \"%s\"", "access", config.accessType);
-    (*config.log)(LOG_DEBUG, "%16s: %s", "assumeEmpty", config.assume_empty ? "true" : "false");
+    (*config.log)(LOG_DEBUG, "%16s: %s", "assume_empty", config.assume_empty ? "true" : "false");
     (*config.log)(LOG_DEBUG, "%16s: \"%s\"", "baseURL", config.baseURL);
     (*config.log)(LOG_DEBUG, "%16s: \"%s\"", "bucket", config.bucket);
     (*config.log)(LOG_DEBUG, "%16s: \"%s\"", "prefix", config.prefix);
@@ -666,6 +681,7 @@ dump_config(void)
     (*config.log)(LOG_DEBUG, "%16s: %s (%jd)", "file_size", config.file_size_str, (intmax_t)config.file_size);
     (*config.log)(LOG_DEBUG, "%16s: %jd", "num_blocks", (intmax_t)config.num_blocks);
     (*config.log)(LOG_DEBUG, "%16s: 0%o", "file_mode", config.file_mode);
+    (*config.log)(LOG_DEBUG, "%16s: %s", "read_only", config.read_only ? "true" : "false");
     (*config.log)(LOG_DEBUG, "%16s: %us", "connect_timeout", config.connect_timeout);
     (*config.log)(LOG_DEBUG, "%16s: %us", "io_timeout", config.io_timeout);
     (*config.log)(LOG_DEBUG, "%16s: %ums", "initial_retry_pause", config.initial_retry_pause);
@@ -748,12 +764,14 @@ usage(void)
     fprintf(stderr, "\t--%-24s %s\n", "connectTimeout=SECONDS", "Timeout for initial HTTP connection");
     fprintf(stderr, "\t--%-24s %s\n", "debug", "Enable logging of debug messages");
     fprintf(stderr, "\t--%-24s %s\n", "filename=NAME", "Name of backed file in filesystem");
+    fprintf(stderr, "\t--%-24s %s\n", "fileMode=MODE", "Permissions of backed file in filesystem");
     fprintf(stderr, "\t--%-24s %s\n", "force", "Ignore different auto-detected block and file sizes");
     fprintf(stderr, "\t--%-24s %s\n", "initialRetryPause=MILLIS", "Inital retry pause after stale data or server error");
     fprintf(stderr, "\t--%-24s %s\n", "ioTimeout=SECONDS", "Timeout for completion of HTTP operation");
     fprintf(stderr, "\t--%-24s %s\n", "maxRetryPause=MILLIS", "Max total pause after stale data or server error");
     fprintf(stderr, "\t--%-24s %s\n", "minWriteDelay=MILLIS", "Minimum time between same block writes");
     fprintf(stderr, "\t--%-24s %s\n", "prefix=STRING", "Prefix for resource names within bucket");
+    fprintf(stderr, "\t--%-24s %s\n", "readOnly", "Return `Read-only file system' error for write attempts");
     fprintf(stderr, "\t--%-24s %s\n", "size=SIZE", "File size (with optional suffix 'K', 'M', 'G', etc.)");
     fprintf(stderr, "\t--%-24s %s\n", "version", "Show version information and exit");
     fprintf(stderr, "\t--%-24s %s\n", "help", "Show this information and exit");
@@ -766,6 +784,7 @@ usage(void)
     fprintf(stderr, "\t--%-24s %u\n", "cacheSize", S3BACKER_DEFAULT_CACHE_SIZE);
     fprintf(stderr, "\t--%-24s %u\n", "cacheTime", S3BACKER_DEFAULT_CACHE_TIME);
     fprintf(stderr, "\t--%-24s %u\n", "connectTimeout", S3BACKER_DEFAULT_CONNECT_TIMEOUT);
+    fprintf(stderr, "\t--%-24s 0%03o (0%03o if `--readOnly')\n", "fileMode", S3BACKER_DEFAULT_FILE_MODE, S3BACKER_DEFAULT_FILE_MODE_READ_ONLY);
     fprintf(stderr, "\t--%-24s \"%s\"\n", "filename", S3BACKER_DEFAULT_FILENAME);
     fprintf(stderr, "\t--%-24s %u\n", "initialRetryPause", S3BACKER_DEFAULT_INITIAL_RETRY_PAUSE);
     fprintf(stderr, "\t--%-24s %u\n", "ioTimeout", S3BACKER_DEFAULT_IO_TIMEOUT);
@@ -773,9 +792,6 @@ usage(void)
     fprintf(stderr, "\t--%-24s %u\n", "minWriteDelay", S3BACKER_DEFAULT_MIN_WRITE_DELAY);
     fprintf(stderr, "\t--%-24s \"%s\"\n", "prefix", S3BACKER_DEFAULT_PREFIX);
     fprintf(stderr, "FUSE options (partial list):\n");
-    fprintf(stderr, "\t%-24s %s\n", "-d", "Debug mode (implies -f)");
-    fprintf(stderr, "\t%-24s %s\n", "-f", "Run in the foreground (do not fork)");
-    fprintf(stderr, "\t%-24s %s\n", "-s", "Run in single-threaded mode");
     fprintf(stderr, "\t%-24s %s\n", "-o allow_root", "Allow root (only) to view backed file");
     fprintf(stderr, "\t%-24s %s\n", "-o allow_other", "Allow all users to view backed file");
     fprintf(stderr, "\t%-24s %s\n", "-o nonempty", "Allow all users to view backed file");
@@ -783,5 +799,8 @@ usage(void)
     fprintf(stderr, "\t%-24s %s\n", "-o gid=GID", "Set group ID");
     fprintf(stderr, "\t%-24s %s\n", "-o sync_read", "Do synchronous reads");
     fprintf(stderr, "\t%-24s %s\n", "-o max_readahead=NUM", "Set maximum read-ahead (bytes)");
+    fprintf(stderr, "\t%-24s %s\n", "-f", "Run in the foreground (do not fork)");
+    fprintf(stderr, "\t%-24s %s\n", "-d", "Debug mode (implies -f)");
+    fprintf(stderr, "\t%-24s %s\n", "-s", "Run in single-threaded mode");
 }
 
